--- a/src/styles/colourExplorer.css
+++ b/src/styles/colourExplorer.css
@@ -4,7 +4,7 @@ main {
     width: 90vw;
     max-width: 900px;
 
-    input[type=text] {
+    input[type=search] {
         width: 100%;
         height: 40px;
         border-radius: 5px;
