--- a/src/styles/colourListItem.css
+++ b/src/styles/colourListItem.css
@@ -6,7 +6,7 @@
         color: hsl(0, 0%, 0%);
     }
 
-    li {
+    li > div {
         display: flex;
         align-items: center;
         justify-content: space-between;
