--- a/src/styles/colourExplorer.css
+++ b/src/styles/colourExplorer.css
@@ -1,14 +1,24 @@
-main {
-    display: flex;
-    flex-direction: column;
-    width: 90vw;
-    max-width: 900px;
+main#colourExplorer {
+    display: grid;
+    grid-template-columns: auto minmax(22vw, 400px) auto minmax(22vw, 400px) auto;
+    grid-template-rows: repeat(5, auto);
+    column-gap: 0px;
+    row-gap: 10px;
+    justify-content: center;
+    align-items: center;
 
-    label{
+    @media (min-width: 400px) {
+        grid-template-rows: repeat(4, auto);
+        column-gap: 30px;
+        row-gap: 5px;
+    }
+
+    label {
         margin-top: 10px;
     }
 
-    input[type=search], select {
+    input[type=search],
+    select {
         width: 100%;
         height: 40px;
         border-radius: 5px;
@@ -20,4 +30,38 @@ main {
     input::placeholder {
         color: hsl(0, 0%, 61%);
     }
+
+    #colourNameFormItem {
+        grid-row: 1;
+        grid-column: 2 / 5;
+    }
+
+    #colourGroupFormItem {
+        grid-row: 2;
+        grid-column: 2 / 5;
+        @media (min-width: 400px) {
+            grid-row: 2;
+            grid-column: 4 / 5;
+
+        }
+    }
+
+    #colourThemeFormItem {
+        grid-row: 3;
+        grid-column: 2 / 5;
+        @media (min-width: 400px) {
+            grid-row: 2;
+            grid-column: 2 / 3;
+        }
+    }
+
+    #colourList {
+        grid-row: 4;
+        grid-column: 2 / 5;
+        @media (min-width: 400px) {
+            grid-row: 3;
+            grid-column: 2 / 5;
+        }
+    }
+
 }
