--- a/src/styles/loadingFallback.css
+++ b/src/styles/loadingFallback.css
@@ -2,6 +2,13 @@ main#loading {
     display: flex;
     flex-direction: column;
     align-items: center;
+    grid-row: 4;
+    grid-column: 2 / 5;
+
+    @media (min-width: 400px) {
+        grid-row: 3;
+        grid-column: 2 / 5;
+    }
 
     h2{
         text-align: center;
